// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`solve Ap -- PatternVar v.s. String 1`] = `
"{
  f: ?f,
  x: "abc"
}"
`;

exports[`solve Ap -- deepWalk 1`] = `
"{
  f: ?f,
  x: "abc",
  c: ?f("abc")
}"
`;

exports[`solve Ap -- same PatternVar 1`] = `
"{
  f: ?f,
  x: ?x
}"
`;
